# MIPT_SLAE

./: CMakeLists.txt  README.md  chebyshev_acceleration.cpp  chebyshev_acceleration.h  conjugate_gradient_method.cpp  conjugate_gradient_method.h  csr_matrix.cpp  csr_matrix.h  dense_matrix.cpp  dense_matrix.h  fastest_gradient_descent.cpp  fastest_gradient_descent.h  gauss_seidel_method.cpp  gauss_seidel_method.h  jacobi_method.cpp  jacobi_method.h  main.cpp  qr_decomposition.cpp  qr_decomposition.h  sor_method.cpp  sor_method.h  ssor_method.cpp  ssor_method.h  tridiagonal_matrix.cpp  tridiagonal_matrix.h
